# agent-harness

./: README.md  pyproject.toml
agent_harness/: __init__.py  _engine.py  _scope.py  _stub.py  agent.py  runtime.py
agent_harness/cache/: __init__.py
agent_harness/channels/: __init__.py
agent_harness/sandbox/: __init__.py
agent_harness/storage/: __init__.py
tests/: test_factories.py  test_http_channel.py  test_package.py  test_redis_cache.py  test_scope.py  test_surface.py
